this is a horrible way to align things in the appbar, but i'll fix it later.

--- a/cg/style.css
+++ b/cg/style.css
@@ -125,12 +125,15 @@ html {
 body {
     background-color: var( --color-background );
     margin: 0;
+    margin-top: 4.3em;
 }
 
 
 .appbar {
     background-color: var( --color-appbar );
     color: var( --theme-dark-color-text-primary );
+    /*font-family: 'Oswald', sans-serif;*/
+    font-family: 'Montserrat', sans-serif;
     position: fixed;
     top:0;
     height: 4em;
@@ -146,6 +149,7 @@ body {
     display: inline-flex;
     position: relative;
     float: left;
+    padding-left: 1em;
     justify-content: center;
     vertical-align: middle;
     line-height: 4em;
@@ -164,6 +168,7 @@ body {
     display: inline-flex;
     position: relative;
     float: right;
+    padding-right: 1em;
     justify-content: center;
     vertical-align: middle;
     line-height: 4em;
@@ -178,6 +183,23 @@ body {
     text-decoration: none;
 
 }
+.appbar i {
+    padding: .75em;
+}
+
+.userCoin {
+    border-radius: 50%;
+    height: 3em;
+    width: 3em;
+    overflow: hidden;
+    padding: .5em;
+}
+.userCoin img {
+    border-radius: 50%;
+    width: 100%;
+    height: auto;
+}
+    
 
 .card {
     padding: 1em;
@@ -195,7 +217,7 @@ body {
 
 .mdCard {
   background: #fff;
-  border-radius: 2px;
+  border-radius: 1em;
   display: inline-block;
   height: 300px;
   margin: 1rem;
@@ -210,7 +232,7 @@ body {
 
 .gCard {
     background-color: var( --color-card );
-    border-radius: 2px;
+    border-radius: .3em;
     overflow: hidden;
 }
 .cardTitle {
